--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=chellenges-groupe9
+server.port=8080
+
+# PostgreSQL configuration
+spring.datasource.url=jdbc:mariadb://${DB_HOST:localhost}:${DB_PORT:3309}/${DB_DB:challenges}
+spring.datasource.username=${DB_USER:shotyourpet}
+spring.datasource.password=${DB_PASSWORD:shotyourpet}
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
