--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.datasource.username=${DB_USER:shotyourpet}
 spring.datasource.password=${DB_PASSWORD:shotyourpet}
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+#Rabbit
+#spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
+#spring.rabbitmq.port=${RABBITMQ_PORT:5672}
+#spring.rabbitmq.username=${RABBITMQ_USERNAME:guest}
+#spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
