--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -68,5 +68,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ env.REPO_NAME }}/challenge:latest, ghcr.io/${{ env.REPO_NAME }}/challenge:1.0.0-${{ steps.vars.outputs.short_commit }}
+          tags: ghcr.io/${{ env.REPO_NAME }}/challenges:latest, ghcr.io/${{ env.REPO_NAME }}/challenges:1.0.0-${{ steps.vars.outputs.short_commit }}
 
