--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=chellenges-groupe9
 server.port=8080
+spring.timezone=Europe/Paris
 
 # PostgreSQL configuration
 spring.datasource.url=jdbc:mariadb://${DB_HOST:localhost}:${DB_PORT:3309}/${DB_DB:challenges}
@@ -8,8 +9,11 @@ spring.datasource.password=${DB_PASSWORD:shotyourpet}
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
-#Rabbit
-#spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
-#spring.rabbitmq.port=${RABBITMQ_PORT:5672}
-#spring.rabbitmq.username=${RABBITMQ_USERNAME:guest}
-#spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${REALM_KEYCLOAK_URL:http://localhost:9001/realms/ShotYourPet}
+
+spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=${RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${RABBITMQ_USERNAME:guest}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
+
+spring.allowed.cors=${ALLOWED_CORS:http://localhost:5173}
